# webmessage

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
src/: account.rs  lib.rs  message.rs  signer.rs  wasm.rs  writer.rs
src/core/: account.rs  group.rs  message.rs  mod.rs
src/store/: account.rs  group.rs  message.rs  mod.rs
tests/: web.rs
