[package]
name = "webmessage"
version = "0.1.1"
description = "Rust-Wasm library that stores a sequence of messages in browser's local storage with hashing and signatures."
authors = ["alvin.cpp@gmail.com"]
license = "Apache-2.0"
repository = "https://github.com/AlvinHon/webmessage"
categories = ["cryptography"]
keywords = ["cryptography", "signature", "webassembly", "web"]
edition = "2021"
resolver = "2"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
sha2 = "0.10.8"
wasm-bindgen = "0.2.92"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
schnorr-rs = "0.1"

[dependencies.getrandom]
version = "*"
features = ["js"]

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Window',
    'Storage',
]